Update .gitignore to exclude .pdf for JOSS paper compilation

--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,7 @@ materforge_plots/
 
 # Report outputs
 materforge_reports/
-*.pdf
+# *.pdf
 
 # Data files (unless specifically needed)
 # *.xlsx
