--- a/src/materforge/data/materials/alloys/1.4301/1.4301.yaml
+++ b/src/materforge/data/materials/alloys/1.4301/1.4301.yaml
@@ -39,19 +39,19 @@ properties:
 
   # ====================================================================================================
   # PROPERTY TYPE 2: STEP_FUNCTION
-  # Format: Uses 'temperature' (single reference) and 'value' (list of 2 values)
+  # Format: Uses 'dependency' (single reference) and 'value' (list of 2 values)
   # Supports temperature references and arithmetic expressions
   # ====================================================================================================
 
   # Example with temperature reference arithmetic:
   # latent_heat_of_fusion:
-  #   temperature: solidus_temperature - 1 # Arithmetic expressions supported
+  #   dependency: solidus_temperature - 1  # Arithmetic expressions supported
   #   value: [0.0, 171401.0]               # [before_transition, after_transition]
   #   bounds: [constant, constant]         # Required for all non-constant properties
 
   # ====================================================================================================
   # PROPERTY TYPE 3: TABULAR_DATA
-  # Format: Uses 'temperature' (list/tuple) and 'value' (list) with same length
+  # Format: Uses 'dependency' (list/tuple) and 'value' (list) with same length
   # Supports temperature references, explicit lists, and tuple notation
   # ====================================================================================================
 
@@ -71,13 +71,13 @@ properties:
 
   # ====================================================================================================
   # PROPERTY TYPE 4: FILE_IMPORT
-  # Format: Uses 'file_path', 'temperature_column', 'property_column'
+  # Format: Uses 'file_path', 'dependency_column', 'property_column'
   # Supports .txt, .csv, .xlsx files with automatic missing value handling
   # ====================================================================================================
 
   heat_capacity:
     file_path: ./1.4301.xlsx               # Relative path from YAML file location
-    dependency_column: T (K)              # Column name for temperature data
+    dependency_column: T (K)               # Column name for dependency data
     property_column: Specific heat (J/(Kg K)) # Column name for property data
     bounds: [constant, constant]           # Required boundary behavior
     regression:                            # Optional regression for data simplification
@@ -97,12 +97,12 @@ properties:
 
   # ====================================================================================================
   # PROPERTY TYPE 5: PIECEWISE_EQUATION
-  # Format: Uses 'temperature' (breakpoints) and 'equation' (list of expressions)
+  # Format: Uses 'dependency' (breakpoints) and 'equation' (list of expressions)
   # Number of equations = number of breakpoints - 1
   # ====================================================================================================
 
   heat_conductivity:
-    dependency: [500, 1700, 3000]         # Temperature breakpoints (K)
+    dependency: [500, 1700, 3000]          # Temperature breakpoints (K)
     equation: [0.0124137215440647*T + 13.0532171803243, 0.0124137215440647*T + 13.0532171803243]
     # Two equations for three breakpoints: [500-1700K] and [1700-3000K]
     bounds: [constant, constant]           # Boundary behavior outside range
@@ -118,7 +118,7 @@ properties:
   # ====================================================================================================
 
   specific_enthalpy:
-    dependency: (300, 3000, 541)          # (start, stop, num_points) - 541 evenly spaced points
+    dependency: (300, 3000, 541)           # (start, stop, num_points) - 541 evenly spaced points
     equation: Integral(heat_capacity, T)   # Symbolic integration
     bounds: [constant, constant]
     regression:
@@ -127,7 +127,7 @@ properties:
       segments: 2
 
   energy_density:
-    dependency: (300, 3000, 5.0)          # (start, stop, step) - 5K increments
+    dependency: (300, 3000, 5.0)           # (start, stop, step) - 5K increments
     equation: density * specific_enthalpy  # Property dependencies automatically resolved
     bounds: [extrapolate, extrapolate]
     regression:
