Update YAML config

--- a/apps/1.4301_HeatEquationKernelWithMaterialBM.yaml
+++ b/apps/1.4301_HeatEquationKernelWithMaterialBM.yaml
@@ -18,39 +18,38 @@ final_boiling_temperature: 3200.
 
 properties:
 
-  _comment: |
-    thermal_diffusivity: # COMPUTED_PROPERTY
-      dependency: (3000, 300, -5.0)
-      equation: heat_conductivity /(density * heat_capacity)
-      bounds: [ extrapolate, extrapolate ]
-      regression:
-        simplify: post
-        degree: 1
-        segments: 3
-  
-    ##################################################
-  
-    energy_density:  # COMPUTED_PROPERTY
-      dependency: (300, 3000, 5.0)
-      equation: density * specific_enthalpy
-      bounds: [ extrapolate, extrapolate ]
-      regression:
-          simplify: post
-          degree: 1
-          segments: 6
-  
-    ##################################################
-  
-    specific_enthalpy:  # COMPUTED_PROPERTY
-      dependency: (3000, 300, 541)
-      equation: Integral(heat_capacity, T)
-      bounds: [ constant, constant ]
-      regression:
-        simplify: post
-        degree: 2
-        segments: 4
-  
-    ##################################################
+  # thermal_diffusivity: # COMPUTED_PROPERTY
+  # dependency: (3000, 300, -5.0)
+  # equation: heat_conductivity /(density * heat_capacity)
+  # bounds: [ extrapolate, extrapolate ]
+  # regression:
+  #   simplify: post
+  #   degree: 1
+  #   segments: 3
+
+  ##################################################
+
+  # energy_density:  # COMPUTED_PROPERTY
+  # dependency: (300, 3000, 5.0)
+  # equation: density * specific_enthalpy
+  # bounds: [ extrapolate, extrapolate ]
+  # regression:
+  #     simplify: post
+  #     degree: 1
+  #     segments: 6
+
+  ##################################################
+
+  # specific_enthalpy:  # COMPUTED_PROPERTY
+  # dependency: (3000, 300, 541)
+  # equation: Integral(heat_capacity, T)
+  # bounds: [ constant, constant ]
+  # regression:
+  #   simplify: post
+  #   degree: 2
+  #   segments: 4
+
+  ##################################################
 
   heat_capacity:  # FILE_IMPORT
     file_path: ./1.4301_HeatEquationKernelWithMaterial.xlsx
