--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -48,13 +48,13 @@ if(ENABLE_GPU_SUPPORT OR CUDA_REQUESTED)
         endif()
     else()
         if(CUDA_REQUESTED)
-            message(WARNING "CUDA was explicitly requested but compiler not found - GPU support disabled")
+            message(FATAL_ERROR "CUDA was explicitly requested but compiler not found - aborting configuration")
         else()
             message(STATUS "CUDA compiler not found - GPU support disabled")
+            SET(WALBERLA_BUILD_WITH_GPU_SUPPORT OFF CACHE BOOL "" FORCE)
+            SET(WALBERLA_BUILD_WITH_CUDA OFF CACHE BOOL "" FORCE)
+            set(GPU_AVAILABLE FALSE)
         endif()
-        SET(WALBERLA_BUILD_WITH_GPU_SUPPORT OFF CACHE BOOL "" FORCE)
-        SET(WALBERLA_BUILD_WITH_CUDA OFF CACHE BOOL "" FORCE)
-        set(GPU_AVAILABLE FALSE)
     endif()
 else()
     SET(WALBERLA_BUILD_WITH_GPU_SUPPORT OFF CACHE BOOL "" FORCE)
