--- a/.gitignore
+++ b/.gitignore
@@ -331,7 +331,9 @@ Testing/
 *.a
 *.lib
 *.exe
+
 # Benchmarking build directories
-benchmarking-scripts/**/build_*
+benchmarking-scripts/**/build_*/
+benchmarking-scripts/**/build_materforge_*
 benchmarking-scripts/**/materforge_src
 benchmarking-scripts/**/*.log
